@@ -1,19 +1,23 @@
-bin_SCRIPTS = permview
-EXTRA_DIST = permview.in MIT.X11
-DISTCLEANFILES = 
+permview_SCRIPTS = permview.exe
+permviewdir = $(prefix)/lib/permview
+
+scriptdir = $(bindir)
+script_SCRIPTS = permview
+
+EXTRA_DIST = permview.cs permview.in MIT.X11
 
 REWRITE = \
-	sed -e "s|\@prefix\@|$(prefix)|g"       \
-	    -e "s|\@pkglibdir\@|$(pkglibdir)|g" \
-	    -e "s|\@bindir\@|$(bindir)|g"		\
+	sed -e "s|\@permview_exe\@|$(permviewdir)/$(permview_SCRIPTS)|g"       \
 	    -e "s|\@MONO\@|$(MONO)|g" 
 
-$(bin_SCRIPTS): $(srcdir)/permview.in Makefile
+$(script_SCRIPTS): $(srcdir)/permview.in Makefile
 	$(REWRITE) $(srcdir)/permview.in > $@.tmp
 	mv $@.tmp $@
 
 CLEANFILES = \
-	permview
+	permview \
+	permview.exe \
+	permview.exe.mdb
 
 DISTCLEANFILES = \
 	configure \
@@ -25,3 +29,18 @@ DISTCLEANFILES = \
 	INSTALL \
 	COPYING \
 	missing
+
+all: permview.exe
+
+permview.exe: permview.cs
+	$(MCS) -target:exe -pkg:mono-cecil -out:$@ permview.cs
+
+install-data-hook:
+	for ASM in $(INSTALLED_ASSEMBLIES); do \
+		$(INSTALL) -c -m 0755 $$ASM $(DESTDIR)$(pkglibdir); \
+	done;
+
+uninstall-hook:
+	for ASM in $(INSTALLED_ASSEMBLIES); do \
+		rm -f $(DESTDIR)$(pkglibdir)/`basename $$ASM`; \
+	done;
