@@ -1,6 +1,6 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(permview, 0.0.0.0)
+AM_INIT_AUTOMAKE(permview, 0.1.0.0)
 AM_MAINTAINER_MODE
 
 AC_PROG_INSTALL
