@@ -1,2 +1,2 @@
 #!/bin/sh
-exec @MONO@ @prefix@/lib/permview/permview.exe $MONO_EXTRA_ARGS "$@"
+exec @MONO@ @permview_exe@ $MONO_EXTRA_ARGS "$@"
